--- a/assets/style.css
+++ b/assets/style.css
@@ -1,30 +1,42 @@
 html {
   font-size: 16px;
+  height: 100%;
+  min-height: 100%;
 }
 
 body {
+  min-height: 100%;
   font-family: 'Inconsolata', monospace;
-  padding: 1em 2em;
+  background: #000 url(battles.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  color: #fff;
+  text-shadow: -3px -3px #000;
+}
+
+.container {
+  padding: 0.75rem 1.5rem;
 }
 
 footer {
-  margin-top: 2em;
+  text-shadow: -2px -2px #000;
+  margin-top: 2rem;
 }
 
 a:link {
-  color: #0098de;
+  color: #fff;
+  text-decoration: none;
+  border-bottom: 1px dotted #fff;
 }
 
 a:visited {
-  color: #006999;
-}
-
-a:hover, a:active {
-  color: #00aeff;
+  color: #fff;
 }
 
 .h3 {
-  font-size: 1.17em;
+  font-size: 1.17rem;
 }
 
 .list-inline {
@@ -37,4 +49,13 @@ a:hover, a:active {
   display: inline-block;
   padding-left: 5px;
   padding-right: 5px;
+}
+
+.bg-credit {
+  position: absolute;
+  font-size: 88%;
+  margin: 0;
+  bottom: 1rem;
+  right: 1rem;
+  color: #aaa;
 }
